# atri_rust

./: Cargo.toml  README.md
atri_ffi/: Cargo.toml  README.md
atri_ffi/src/: contact.rs  error.rs  ffi.rs  lib.rs  managed.rs  plugin.rs
atri_ffi/src/message/: forward.rs  meta.rs  mod.rs
atri_macros/: Cargo.toml  README.md
atri_macros/src/: lib.rs
atri_plugin/: Cargo.toml  README.md
atri_plugin/src/: client.rs  error.rs  event.rs  lib.rs  listener.rs  log.rs  plugin.rs
atri_plugin/src/contact/: friend.rs  group.rs  member.rs  mod.rs
atri_plugin/src/env/: mod.rs
atri_plugin/src/loader/: mod.rs
atri_plugin/src/message/: at.rs  face.rs  ffi.rs  forward.rs  image.rs  macros.rs  meta.rs  mod.rs
atri_plugin/src/runtime/: manager.rs  mod.rs
