[package]
name = "atri_ffi"
version = "0.4.0"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriPlugin FFI structs"
readme = "README.md"
keywords = [
    "Atri",
    "FFI",
    "oicq"
]
license = "MIT"
homepage = "https://atrikawaii.github.io/atri_doc/"
repository = "https://github.com/AtriKawaii/atri_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
