[package]
name = "atri_macros"
version = "0.1.1"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriBot plugin macros"
readme = "README.md"
keywords = [
    "Atri",
    "macro",
    "plugin",
    "oicq"
]
license = "MIT"
homepage = "https://github.com/LaoLittle/atri_bot"
repository = "https://github.com/LaoLittle/atri_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["proc-macro"]