[package]
name = "atri_macros"
version = "0.2.1"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriPlugin macros"
readme = "README.md"
keywords = [
    "Atri",
    "macro",
    "plugin",
    "oicq"
]
license = "MIT"
homepage = "https://atrikawaii.github.io/atri_doc/"
repository = "https://github.com/AtriKawaii/atri_rust"

[lib]
proc-macro = true