[package]
name = "atri_plugin"
version = "0.2.7"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriBot plugin"
readme = "README.md"
keywords = [
    "Atri",
    "macro",
    "plugin",
    "oicq"
]
license = "MIT"
homepage = "https://atrikawaii.github.io/atri_doc/"
repository = "https://github.com/AtriKawaii/atri_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.atri_ffi]
version = "0.2.3"
path = "../atri_ffi"

[dependencies.atri_macros]
version = "0.1.1"
path = "../atri_macros"